policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - argocd
                - monitoring
                - ingress-nginx
                - local-path-storage
      validate:
        message: "У образа должен быть явный тег (image:версия)."
        pattern:
          spec:
            containers:
              - image: "*:*"
    - name: disallow-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - argocd
                - monitoring
                - ingress-nginx
                - local-path-storage
      validate:
        message: "Тег :latest запрещён — укажи конкретную версию."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
