tests/disallow-latest-tag/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: demo
spec:
  containers:
    - name: nginx
      image: nginx:1.27.3
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-latest
  namespace: demo
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-tag
  namespace: demo
spec:
  containers:
    - name: nginx
      image: nginx
