tests/disallow-latest-tag/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-latest-tag-test
policies:
  - ../../policies/disallow-latest-tag.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-latest-tag
    rule: require-image-tag
    kind: Pod
    resources:
      - good-pod
      - bad-pod-latest
    result: pass
  - policy: disallow-latest-tag
    rule: require-image-tag
    kind: Pod
    resources:
      - bad-pod-no-tag
    result: fail
  - policy: disallow-latest-tag
    rule: disallow-latest
    kind: Pod
    resources:
      - good-pod
    result: pass
  - policy: disallow-latest-tag
    rule: disallow-latest
    kind: Pod
    resources:
      - bad-pod-latest
    result: fail
